Removed a AOS as it was causing white space issues

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,6 @@ a {
 .category__icons {
   display: flex;
   align-items: center;
-  white-space: nowrap;
 }
 
 .category-selected__card{
